--- a/apps-script/appsscript.json
+++ b/apps-script/appsscript.json
@@ -1,10 +1,10 @@
 {
-  "timeZone": "America/Santiago",
+  "timeZone": "Europe/London",
   "dependencies": {
     "enabledAdvancedServices": [],
     "libraries": []
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8",
-  "oauthScopes": []
+  "oauthScopes": ["https://www.googleapis.com/auth/spreadsheets"]
 }
