--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ez-clasp",
-  "version": "0.0.4",
-  "author": "cristobalgvera",
-  "description": "Google Apps Script starter project with TypeScript support",
+  "name": "google-sheet-sensitivity-analysis",
+  "version": "0.0.1",
+  "author": "Goodheart Labs",
+  "description": "Google Sheet Sensitivity Analysis",
   "license": "MIT",
   "private": true,
   "main": "src/index.ts",
@@ -64,18 +64,5 @@
     "ts-jest": "^29.1.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
-  },
-  "keywords": [
-    "clasp",
-    "google-apps-script",
-    "gas",
-    "typescript",
-    "rollup-js",
-    "prettier",
-    "eslint",
-    "javascript",
-    "babel",
-    "husky",
-    "lint-staged"
-  ]
+  }
 }
