--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clasp:create": "rimraf .clasp.json && clasp create --rootDir . --title CHANGE_MY_NAME && prettier --write .clasp.json",
     "clasp:login": "clasp login",
     "deploy": "npm run check:all && npm run build && npm run push",
+    "dev:watch": "NODE_ENV=development npm run build -- --watch",
     "format:check-all": "npm run format:check-file -- .",
     "format:check-file": "prettier --check",
     "format:fix-all": "npm run format:fix-file -- .",
@@ -36,11 +37,16 @@
     "@babel/preset-typescript": "^7.23.0",
     "@google/clasp": "^2.4.2",
     "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.5",
     "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-replace": "^5.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.4",
     "@types/eslint": "^8.44.3",
     "@types/google-apps-script": "^1.0.72",
     "@types/node": "^20.7.1",
+    "@types/react": "^18.2.27",
+    "@types/react-dom": "^18.2.12",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
@@ -50,6 +56,8 @@
     "gts": "^5.0.1",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "rollup": "^3.29.4",
     "rollup-plugin-dotenv": "^0.5.0",
